static/styles.css
* {
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
  -ms-transition: all 0.3s ease-out;
  -o-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
}

body {
  overflow-x: hidden;
  /*margin-bottom: 32px;*/
}

span {
  position: relative;
}

/* For the underline effect when About, Projects, or Contact is clicked or hovered */
span::before {
  content: '';
  position: absolute;
  left: 50%;
  bottom: 0;
  width: 100%;
  height: 2px;
  background-color: #8a8a8a;
  transform-origin: center;

  -webkit-transform: translate(-50%, 0) scaleX(0);
  -moz-transform: translate(-50%, 0) scaleX(0);
  -ms-transform: translate(-50%, 0) scaleX(0);
  -o-transform: translate(-50%, 0) scaleX(0);
  transform: translate(-50%, 0) scaleX(0);

  -webkit-transition: transform 0.7s ease-in-out;
  -moz-transition: transform 0.7s ease-in-out;
  -ms-transition: transform 0.7s ease-in-out;
  -o-transition: timetransform 0.7s ease-in-out;
  transition: transform 0.7s ease-in-out;
}

span:hover::before {
  -webkit-transform: translate(-50%, 5%) scaleX(1);
  -moz-transform: translate(-50%, 5%) scaleX(1);
  -ms-transform: translate(-50%, 5%) scaleX(1);
  -o-transform: translate(-50%, 5%) scaleX(1);
  transform: translate(-50%, 5%) scaleX(1);
}

@media screen and (min-width: 601px) {
  #projects, #about, #contact {
    height: 100vh;
  }

  #projects > h1 {
    padding: 2%;
  }

  .center-container {
    padding: 20% 5% 0 5%;
  }

  .flex-container-row > a {
    width: 100%;
    text-align: center;
  }
}

/* For mobile devices */
@media screen and (max-width: 600px) {
  #projects > h1 {
    margin: 24px;
  }

  .center-container {
    padding-left: 5%;
  }

  #contact {
    height: 100vh;
  }
}

#projects {
  opacity: 0;
}

.flex-container {
  display: flex;
  flex-direction: column;
}

.flex-container > div {
  width: 100%;
  height: 50vh;
  text-align: center;
  font-size: 30px;
}

#image-header {
  opacity: 0;
  -webkit-animation: slideDown 2s ease 0s forwards;
  -o-animation: slideDown 2s ease 0s forwards;
  animation: slideDown 2s ease 0s forwards;
}

.flex-container-row {
  display: flex;
}

.flex-container-row > a {
  font-size: 32px;
  margin: auto;
  opacity: 0;
  text-decoration: none;

  -webkit-animation: slideLtoR 2.5s ease 0s forwards;
  -o-animation: slideLtoR 2.5s ease 0s forwards;
  -moz-animation: slideLtoR 2.5s ease 0s forwards;
  animation: slideLtoR 2.5s ease 0s forwards;
}

.row {
  display: flex;
  margin: 0;
}

.column {
  flex: 50%;
  height: 100%
}

#about-left, #about-right {
  opacity: 0;
}

#image-header {
  padding-top: 75px;
}

.text-header {
  font-size: 64px;
}

.frame {
  height: 100%;
  width: 100%;
  white-space: nowrap;
  text-align: center;
}

.helper {
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.p-styled {
  font-size: 20px;
  padding: 16px;
  line-height: 35px
}

.card {
  height: 50%;
  width: 18rem;
  cursor: pointer;
  margin: 16px;
  flex: 1 1 auto;
}

.card-body {
  padding: 25px;
}

.card:hover {
  border: 1px solid #8a8a8a;

  -webkit-transform: translateY(-5%);
  -moz-transform: translateY(-5%);
  -ms-transform: translateY(-5%);
  -o-transform: translateY(-5%);
  transform: translateY(-5%);

  -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175);
  -moz-box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175);
  box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175);
}

/*.card-wrapper {*/
  /*height: 100%;*/
  /*!*display: flex;*!*/
  /*!*justify-content: center;*!*/
/*}*/

.card-container {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-self: center;
}

.contact-wrapper {
  height: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.contact-wrapper > div {
  width: 100%;
  margin: 16px 0 16px 0;
  align-self: center;
  text-align: center;
}

.contact-wrapper > div > a > img {
  vertical-align: bottom;
}

.contact-wrapper > div:nth-child(odd) > a > img:hover {
  -webkit-transform: translateX(-20%) rotateZ(-45deg);
  -moz-transform: translateX(-20%) rotateZ(-45deg);
  -ms-transform: translateX(-20%) rotateZ(-45deg);
  -o-transform: translateX(-20%) rotateZ(-45deg);
  transform: translateX(-20%) rotateZ(-45deg);
}

.contact-wrapper > div:nth-child(even) > a > img:hover {
  -webkit-transform: translateX(20%) rotateZ(45deg);
  -moz-transform: translateX(20%) rotateZ(45deg);
  -ms-transform: translateX(20%) rotateZ(45deg);
  -o-transform: translateX(20%) rotateZ(45deg);
  transform: translateX(20%) rotateZ(45deg);
}

::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-track {
  background: #fff;
}

::-webkit-scrollbar-thumb {
  background: #b7b7b7;
}

::-webkit-scrollbar-thumb:hover {
  background: #838383;
}

@keyframes slideLtoR {
  0% {
    opacity: 0;
    transform: translateX(-100%);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideRtoL {
  0% {
    opacity: 0;
    transform: translateX(100%);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideDown {
  0% {
    opacity: 0;
    transform: translateY(-100%);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideRtoLandRotateZ {
  0% {
    opacity: 0;
    transform: translateX(100%) rotateZ(360deg);
  }
  100% {
    opacity: 1;
    transform: translateX(0) rotateZ(0deg);
  }
}

@keyframes slideLtoRandRotateZ {
  0% {
    opacity: 0;
    transform: translateX(-100%) rotateZ(-360deg);
  }
  100% {
    opacity: 1;
    transform: translateX(0) rotateZ(0deg);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@-webkit-keyframes slideLtoR {
  0% {
    opacity: 0;
    -webkit-transform: translateX(-100%);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
  }
}

@-webkit-keyframes slideRtoL {
  0% {
    opacity: 0;
    -webkit-transform: translateX(100%);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
  }
}

@-webkit-keyframes slideDown {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-100%);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
  }
}

@-webkit-keyframes slideRtoLandRotateZ {
  0% {
    opacity: 0;
    -webkit-transform: translateX(100%) rotateZ(360deg);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateX(0) rotateZ(0deg);
  }
}

@-webkit-keyframes slideLtoRandRotateZ {
  0% {
    opacity: 0;
    -webkit-transform: translateX(-100%) rotateZ(-360deg);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateX(0) rotateZ(0deg);
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

